WebApp: Add missing dependency.

Bug: 875042
Change-Id: I33dfb721ad6eeaa04509bb0c83ea92456cb52aaf
Reviewed-on: https://chromium-review.googlesource.com/1179423
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: Alexey Baskakov <loyso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583969}
Former-commit-id: b2e857340122fee2e6bcc06b9ba166382b4f55fb